synaptic (0.62.9) UNRELEASEDunstable; urgency=low

  * common/rpackage.h:
    - fix segfault with latest apt
  * common/sections_trans.cc:
    - fix typo in gnu-r section description
  * po/fr.po:
    - updated, thanks to Stéphane Blondon, closes: #543981
  * po/sl.po:
    - updated, thanks to Matej Urbančič

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 27 Aug 2009 18:27:02 +0200

synaptic (0.62.8) UNRELEASEDunstable; urgency=low

  * debian/control:
    - add build-conflict against librpm-dev
    - recommends gksu|kdebase-bin (kdsu is fine too) 
      closes: #442421
  * add filter for manual installed packages (LP: #122047)
  * fix typo (thanks to Florentin Duneau), closes: #542122
  * po/pt_BR.po:
    - updated translation, thanks to Sergio Cipolla 
      (closes: #532473)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 10 Jul 2009 14:35:17 +0200

synaptic (0.62.7) unstable; urgency=low

  * show progress when searching and not not block the UI
    (LP: #24188)
  * gtk/glade/dialog_authentication.glade:
    - add two missing "translatable" entries, thanks to 
      Daniele Forsi)
  * po/sk.po:
    - updated translation, thanks to helix84, closes: #532790 
  * po/it.po:
    - updated translation, thanks to Milo Casagrande, closes: #534351
  * po/es.po:
    - updated translation, thanks to Francisco Javier Cuadrado, 
      closes: #533322

 -- Michael Vogt <mvo@debian.org>  Thu, 25 Jun 2009 16:17:56 +0200

synaptic (0.62.6) unstable; urgency=low

  * po/th.po:
    - updated Thai translation,
      thanks to Theppiak Karoonboonyanan, closes: #512605, #441571
  * po/br.po:
    - updated breton translation, 
      thanks to Denis ARNAUD
  * po/sk.po:
    - updated Slovak translation,
      thanks to Ivan Masár, closes: #531063
  * po/es.po:
    - updated Spanish translation,
      thanks to Francisco Javier Cuadrado, closes: #500400
  * po/tr.po:
    - updated Turkish translation,
      thanks to Mert Dirik, closes: #488995
  * po/eu.po: