@@ -8,6 +8,8 @@ synaptic (0.62.9) UNRELEASEDunstable; urgency=low
     - updated, thanks to Stéphane Blondon, closes: #543981
   * po/sl.po:
     - updated, thanks to Matej Urbančič
+  * take the "Origin" field from the release file into account
+    when looking for supported packages
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 27 Aug 2009 18:27:02 +0200
 
